# ChimeraX-LabelAsym

./: README.md  pyproject.toml
scripts/: smoke.cxc
src/: __init__.py  commands.py  hook.py
tests/: conftest.py  test_build_mapping.py  test_colorbylabel.py  test_file_fallback.py  test_handler_lifecycle.py  test_labelcolor.py  test_populate_integration.py  test_selectors.py
